# ExampleDashboards

./: .gitignore  Pipfile  Readme.md  main.py  pyproject.toml
.junie/: guidelines.md
dashboards/: build_instruments.py  df_out.csv  position.json  ux_utils.py
dashboards/analytics/: correlation.py
dashboards/bond_real_option_analysis/: app.py  context.py  engine.py
dashboards/components/: asset_select.py  curve_bump.py  curve_bumps_and_stats.py  date_selector.py  engine_status.py  npv_table.py  portfolio_select.py  position_loader.py  position_yield_overlay.py  positions_io.py  valuation_inputs.py
dashboards/core/: data_nodes.py  formatters.py  ql.py  state.py  tenor.py  theme.py
dashboards/curves/: __init__.py  bumping.py  rates.py  z_spread.py
dashboards/fixed_income_app/: app.py  context.py
dashboards/helpers/: mock.py
dashboards/plots/: __init__.py  curves.py  heatmap.py  liquidity.py  portfolio.py  tables.py  theme.py
dashboards/services/: contexts.py  curves.py  portfolios.py  positions.py
data/: IRS_MXN_CURVE.csv  MEXDERSWAP_IRSTIIEPR.csv  TIIE28_FIXINGS.csv  boostrap.py  dump_position_example.json
examples/alm/: __main__.py  position.json  position_usd.json  streamlit_alm.py  utils.py  ux_utils.py
examples/instruments_from_valmer/: build_instruments.py  build_instruments_old.py  streamlit_bonds.py
mainsequence_example_dashboards.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: data_interface.py  settings.py  utils.py
tests/: hold_option.py  position.json  test_instruments_direct.py  tiie_bond_bump_analysis.py
ui/: position.json
(+63 files in other folders)
